--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Personal Blog
 email: contact@pavelsusloparov.com
 description: >-
-  Read about programming and software engineer processes
+  Read about programming and software engineering processes
 baseurl: "/" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: "PSusloparov"
