--- a/_config.yml
+++ b/_config.yml
@@ -18,7 +18,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 
-title: Personal Blog
+title: Pavel Susloparov Personal Blog
 email: contact@pavelsusloparov.com
 description: >-
   Read about programming and software engineering processes
